Fix for 'Nested folders are not loaded properly'

umbrello/model_utils.cpp
- In function convert_OT_LVT case UMLObject::ot_Folder,
  - replace local UMLFolder *f by UMLPackage *p initialized to
    o->asUMLPackage();
  - at do-while loop condition omit call to asUMLFolder().
    Reason: Permit packages as intermediate stores.

umbrello/uml1model/package.cpp
- On processing <packagedElement> and <ownedElement>,
  - before calling Object_Factory::makeObjectFromXMI(), retrieve
    attribute "stereotype" into local stereoID;
  - pass stereoID into call of Object_Factory::makeObjectFromXMI().

BUG: 430323